css/ccc.css
/* Custom themes for Channel Cat Charters */
/* RESETS and global settings */
body
{
    scroll-behavior: smooth;
}
h1
{
    font-size: 4rem;
}
h2
{
    font-size: 3rem;
}
h3
{
    font-size: 2rem;
}
h1, h2, h3, h4, h5, h6,  {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	vertical-align: baseline;
}
blockquote:before, 
blockquote:after,
q:before, q:after {
	content: "";
}
blockquote, q {
	quotes: "" "";
}

/* remember to define focus styles! */
:focus {
	outline: 0;
    border-bottom: 1px solid skyblue;
}

.offset-top
{
    margin-top: 50px;
}
/* custom buttons */
.btn {
  margin: 0 0 20px 0;
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 2em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  border: none;
  border-radius: 0;
  padding: 10px;
  background-color: skyblue;
  transition: all 1.0s ease;
  width: 100%;
  color: #FFF;
}
.btn:hover {
  background-color: aliceblue;
  font-size: 2.5em;
  transition: all 1.0s ease;
  color: #333;
}
.g-btn
{
    margin-left: -15px;
}

#vtours
{
    scroll-behavior: smooth;
}
/* Featurettes
------------------------- */

.featurette-divider {
  margin: 0 0 20px 0; /* Space out the Bootstrap <hr> more */
}

.featurette-heading {
  font-family: 'Montserrat', sans-serif;
  line-height: 1.25;
  /*letter-spacing: -1px;*/
}
/* virtual tour iframes */
iframe
{
    border: 0; 
    padding: 0; 
    margin: 40px 0 0 20px; 
    overflow: hidden;
    width: 710px;
    height: 400px;
}

/* Bootstrap Overrides */
/* header and nav customizations */
nav
{
    min-width: 550px;
}
.navbar-fixed-top 
{
    border-bottom: 5px solid skyblue;
}

.navbar-default
{
    /*background: rgba(255,255,255,0.95);*/
    background-color: #FFF;
    border-radius: 0;
}
/* prevent site logo from wrapping */
.navbar-default .navbar-brand {
    white-space: nowrap;
}
.navbar-default .navbar-brand>li>a,
.navbar-default .navbar-nav>li>a
{
    color: #666;
    transition: all .5s ease;
    text-decoration: none;
}
.navbar-default .navbar-brand>li>a:hover,
.navbar-default .navbar-nav>li>a:hover
{
    color: #333;
    font-size: 2.5rem;
    transition: all .5s ease;
}
.navbar-brand
{
    margin-top: -2px;
    transition: all .5s ease;
}
.navbar-brand,
.navbar-default .navbar-brand>li>a:hover
{
    font-variant: small-caps;
    font-size: 3rem;
    /*background-color: #FFF !important;*/
}
#navbar,
.nav-tabs>li>a,
a.accordion-link
{
    font-family: 'Montserrat', sans-serif;
    font-size: 2rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-transform: uppercase;
    text-decoration: none;
}

.navbar-default .navbar-nav>.active>a, 
.navbar-default .navbar-nav>.open>a
{
    color: #FFF;
    background-color: skyblue;
    background-image: none;
    box-shadow: none;
}
.navbar-default .navbar-nav>.active>a:hover, 
.navbar-default .navbar-nav>.open>a:hover
{
    background-color: aliceblue;
}

/* Special class on .container surrounding .navbar, used for positioning it into place. */
.navbar-wrapper {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 20;
}
/* Flip around the padding for proper display in narrow viewports */
.navbar-wrapper > .container {
  padding-right: 0;
  padding-left: 0;
}
.navbar-wrapper .navbar {
  padding-right: 15px;
  padding-left: 15px;
}
.navbar-wrapper .navbar .container {
  width: auto;
}
/* web font for logo and headers */
.ccc-font
{
    font-family: 'Montserrat', sans-serif;
    transition: all 0.5s ease;
}

#directions
{
  background:url(../images/directions.jpg) no-repeat center center; 
    background-size: cover;
    height: 472px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
    position: relative;
    margin-top: 50px;
}
#d-content
{
    margin-top: 0px;
}
/* Directions featured image */
.dir-img
{
    margin: 30px 0 0 0;
}
/* contact page */
#contact
{
    background:url(../images/crew.jpg) no-repeat center center; 
    background-size: cover;
    height: 100vh;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
    position: relative;
}
#c-content
{
    margin-top: 80px;
}
.ccc-map1
{
    background:url(../images/ccc_map1.jpg) no-repeat center center; 
    background-size: cover;
    width: 100%;
    height: 500px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
/* call to action images */
.special1
{
    background:url(../images/special_events.jpg) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
.charters1
{
    background:url(../images/IMG_0042.jpg) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
.prestigious1
{
    background:url(../images/IMG_2015.jpg) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
.charteragent
{
    background:url(../images/charter1.JPG) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
.office
{
    background:url(../images/gallery/thumbs/front_on.jpg) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
}
.emailus
{
    background:url(../images/pilotsd.jpg) no-repeat center center; 
    background-size: cover;
    height: 320px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
    cursor: pointer;
}
.special1 h3,
.charters1 h3,
.prestigious1 h3,
.charteragent h3,
.office h3,
.emailus h3
{
    color: #FFF;
    font-size: 3rem;
    /*letter-spacing: 2px;*/
    text-shadow: 0 1px 1px #000;
    position: absolute;
    bottom: 0;
    right: 20px;
    padding: 0 20px 0 20px;
    background-color: rgba(0,0,0,0.5);
    /*border-radius: 10px;*/
    font-family: 'Montserrat', sans-serif;
}
.c-footer
{
    position: absolute;
    bottom: 10px;
    left: 50%;
    width: 960px;
    margin-left: -480px;
}
/* About us banner img */
#about
{
    background:url(../images/IMG_1995.jpg) no-repeat center center; 
    background-size: cover;
    height: 472px;
    border: 1px solid #DDD;
    transition: all 1.0s ease;
    position: relative;
}
.title-wrapper
{
    
    position: absolute;
    right: 2%;
    bottom: 2%;
}
#about h1,
#directions h1,
#contact h1
{
    color: #FFF;
    font-size: 10rem;
    line-height: 8rem;
}
#contact h1
{
    color: #666;
}
#about p
{
    color: #FFF;
    font-size: 3rem;
    float: right;
} 
.about
{
    color: #CCC;
    padding-top: 5px;
    font-size: 4.65rem;
    line-height: 5.15rem; 
}
.about:before 
{
    content: open-quote;
    color: #EAEAEA;
    font-size: 5em;
    line-height: 0;
    vertical-align: -0.385em;
}
.about:after 
{
    content: close-quote;
    color: #EAEAEA;
    font-size: 5em;
    line-height: 0;
    vertical-align: -.635em;
}
p.cattail-intro:first-child:first-letter
{
    float: left; 
    color: #87CEEB; 
    font-size: 75px; 
    line-height: 60px; 
    padding-top: 4px; 
    padding-right: 8px; 
    padding-left: 3px;  
}
p.cattail-intro,
p.cattail,
.cattail
{
    font-size: 2.45rem;
    color: #999;
}
.cat-img
{
    margin: 35px 30px 0 0;
}
.cat-img-r
{
    margin: 10px 0 0 30px;
}
.cat-img-l
{
    margin: 20px 30px 0 0;
}
.cat-facts
{
    width: 425px;
    background-color: #87CEEB;
    padding: 10px 10px 5px 15px;
    margin: 0 30px 0 0;
}
.cat-facts span
{
    text-transform: uppercase;
    font-size: 5rem;
    color: #FFF;
    line-height: 5rem;
}
.cat-facts li
{
    margin: 0 0 0 -15px;
    font-size: 2.45rem;
    color: #FFF;    
}
/* responsive design */
@media (min-width: 1200px) {
    iframe
    { 
        margin: 40px 0 0 68px;
    }
    .dir-img
    {
        margin: 30px 0 0 15px;
    }
}
@media (min-width: 992px) and (max-width: 1200px) {
    .dir-img
    {
        margin: 30px 0 0 15px;
    }    
}
@media (max-width: 992px) {
    iframe 
    {
        margin: 0 0 0 5px;
    }
    .ccc-font
    {
        text-align: center;
        transition: all 0.5s ease;
    }
    .c-footer
    {
        display: none;
    }
}

@media (min-width: 768px) and (max-width: 1200px) {
    .navbar-collapse.collapse {
        display: none !important;
    }
    .navbar-collapse.collapse.in {
        display: block !important;
    }
    .navbar-header .collapse, .navbar-toggle {
        display:block !important;
    }
    .navbar-header {
        float:none;
    }
        .navbar-brand
    {
        font-size: 4rem;
        transition: all 0.5s ease;
    }
}
@media (max-width: 768px) {
    iframe 
    {
        margin: 0 0 0 -5px;
    }
    .navbar-brand
    {
        font-size: 4rem;
        transition: all 0.5s ease;
    }
    .ccc-font
    {
        text-align: center;
        transition: all 0.5s ease;
    }
    .lead
    {
        font-size: 2.625rem;
    }
    #about h1
    {
        font-size: 8rem;
    }
}
@media (max-width: 640px) {
    iframe 
    {
        margin: 0 0 0 -15px;
    }
    .navbar-brand
    {
        font-size: 4rem;
        transition: all 0.5s ease;
    }
    .ccc-font
    {
        text-align: center;
        transition: all 0.5s ease;
    }
    .lead
    {
        font-size: 2.875rem;
    }
    #about h1
    {
        font-size: 6rem;
    }
}
@media (max-width: 375px) {
    
    .navbar-brand
    {
        font-size: 3rem;
        transition: all 0.5s ease;
    }
    #about h1
    {
        font-size: 4rem;
    }
}
@media (min-width: @screen-sm-min) {
    .navbar-default
    { 
        transition: all 0.5s ease;
    }
}

